--- a/css/apps.css
+++ b/css/apps.css
@@ -10,13 +10,21 @@ body,html {
 a {color: #1abc9c;text-decoration: none;}
 a:hover {color: #1c1c1c;}
 header {
- background: #34495e;
  padding: 15px;
  color: #fff;
+ text-align: center;
 }
 h1 {font-size: 20px;}
 section {
-  background: #fff;
+  background: #ecf0f1;
   color: #444;
   padding: 15px;
+}
+.cntc {
+  width: 60%;
+  margin: 20px auto;
+}
+footer {
+  background: #2c3e50;
+  padding: 20px;
 }
